src/index.css
html {
  font-size: min(2vw, 16px);
}

* {
  box-sizing: border-box;
}

body {
  font-family:
    Gordita, Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
    sans-serif;
  background: url(/images/Web-Banner-img-bw.png);
  background-color: black;
  background-repeat: no-repeat;
  background-position: top;
  background-size: contain;
  background-attachment: fixed;
  box-shadow: 0 0 100px 100px black inset;
  margin: 0;
  padding: 0 2rem;
  text-align: center;
  font-size: 1.4rem;
  overflow-x: hidden;
}

@media (max-width: 420px) {
  body {
    box-shadow: 0 0 20px 20px black inset;
    font-size: 1.8rem;
  }
}

main {
  margin: 0 auto;
  display: grid;
  gap: 4.2rem;
  width: min(100vw, 800px);
}

h1,
h2 {
  color: #f60;
  text-transform: uppercase;
  font-weight: 900;
  line-height: 1.1;
}

h1 {
  font-size: 6rem;
  margin: 14rem auto;
}

h2 {
  font-size: 2.7rem;
}

form {
  display: grid;
  gap: 1rem;
}

label {
  width: 100%;
  display: grid;
  grid-template-columns: 8ch 1fr;
  gap: 1rem;
}

input[type="text"] {
  width: calc(100% - 8px);
}

input[type="submit"] {
  margin-left: auto;
}

textarea {
  width: calc(100% - 8px);
  min-height: 10rem;
}

a {
  color: oklab(64.902% 0.19976 0.1304);
}

p {
  margin: 2rem auto;
  line-height: 1.35;
}

hr {
  margin: 3rem;
  border: none;
  outline: solid 1px lightgrey;
}

footer {
  background: rgba(255, 255, 255, 0.8);
  padding: 2rem;
  border-radius: 1.5rem;
}

footer img {
  display: block;
  width: 100%;
  margin-bottom: 2rem;
}

.banner {
  max-width: min(80vw, 800px);
  margin: 12rem auto 3rem;
  opacity: 0.8;
}

.banner-small {
  max-width: min(40vw, 350px);
  margin: 4rem;
}

.card {
  background-color: rgba(255, 255, 255, 0.8);
  padding: 4rem;
  border-radius: 1.5rem;
}

.markdown-body {
  background-color: rgba(255, 255, 255, 0.8);
  padding: 1rem 2rem;
  border-radius: 1.5rem;
}

.markdown-body img {
  max-height: 45.6rem;
}

.instagram-media {
  background: #fff;
  margin: 0 auto;
  padding: 0;
  max-width: 540px;
  min-width: 326px;
  border-radius: 0;
}

@media (max-width: 420px) {
  .instagram-media {
    transform: scale(0.8);
  }
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}

